# bankoperation_13_1

./: DEVELOP.md  README.md  STABLE.md  main.py  pyproject.toml  test_develop.py
Project_new/: pyproject.toml
PythonProject4/: main.py
PythonProject5/: pyproject.toml
PythonProject6/: pyproject.toml
PythonProject7/: pyproject.toml
PythonProject8/: main.py  pyproject.toml
Task_9.1_Poetry/: pyproject.toml  task_1.py
Test_1/: pyproject.toml
Test_2/: pyproject.toml
bank_widget/: pyproject.toml
bank_widget_1/: pyproject.toml
bankoperation/: pyproject.toml
bankoperation/project-bankoperation_1.1/: pyproject.toml
bankoperation/src/: masks.py  processing.py  widget.py
bankoperation_1.0/: pyproject.toml
bankoperation_1.0/src/: masks.py  widget.py
bankoperation_1.0/tests/: test_processing.py
bankoperation_1.1/tests/: conftest.py  test_widget.py
bankoperation_1.2/: .flake8  .gitignore  main.py
bankoperation_1.2/src/: masks.py  widget.py
bankoperation_1.2/tests/: test_widget.py
bankoperation_12_2/: .env.exampl  .gitignore  README.md  pyproject.toml
bankoperation_12_2/src/: generators.py  masks.py  processing.py  utils.py  widget.py
bankoperation_12_2/tests/: conftest.py  test_generators.py  test_operations_parser.py  test_processing.py  test_utils.py  test_widget.py
bankoperation_9.1/: pyproject.toml
bankoperation_9.1/src/: masks.py
masks_project/: pyproject.toml
praxis_11_1/: README.md  main.py  pyproject.toml
project8/env/tests/: test_main.py
src/: decorators.py  external_api.py  file_readers.py  operations_parser.py
tests/: test_decorators.py  test_external_api.py  test_file_readers.py  test_masks.py
