[project]
name = "masks-project"
version = "0.1.0"
description = " Проект на бэкенде будет готовить банковские данные для отображения в новом виджете"
authors = [
    {name = "Alexander Schischkin",email = "schischkin2@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]

[tool.black]
line-length = 119
exclude = '''
(
 /(
   \.eggs         # exclude a few common directories
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | dist
 )/
)
'''

[tool.isort]
line-length = 119

[tool.mypy]
disallow-untyped-defs = true
warn-return-any = true
exclude = 'venv'
