[project]
name = "praxis-11-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Schischkin",email = "schischkin2@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pe (>=0.6.0,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
